# gtkboard

./: .cvsignore  .gitignore  AUTHORS  CREDITS  ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  gtkboard.spec  gtkboard_0.10.7.orig.tar.gz.delta  gtkboard_0.10.7.orig.tar.gz.id  gtkboard_0.11pre0+cvs.2003.11.02.orig.tar.gz.delta  gtkboard_0.11pre0+cvs.2003.11.02.orig.tar.gz.id  gtkboard_0.11pre0.orig.tar.gz.delta  gtkboard_0.11pre0.orig.tar.gz.id  mkinstalldirs
debian/: .cvsignore  README.Debian  changelog  control  copyright  gtkboard.6  gtkboard.desktop  gtkboard.doc-base  gtkboard.doc-base.gtkboard-dev  gtkboard.install  gtkboard.manpages  gtkboard.menu  gtkboard32.xpm  menu  rules  watch
debian/patches/: series
doc/: Makefile.am  Makefile.in  YES  header.html  index.html
doc/devel/: index.html  newgame.html  philosophy.html
doc/devel/devel/: index.html
doc/doxygen/: doxygen_config  header.html
pixmaps/: Makefile.am  Makefile.in  alpha.xpm  arrows.xpm  ball.xpm  chess.xpm  cpento.xpm  logo48.xpm  memory.xpm  misc.xpm  ninemm_bg.xpm  pacman.xpm  pixmaps.c  pixmaps.h  splash.xpm
sounds/: Makefile.am  Makefile.in
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  aaball.c  aaball.h  ab.c  antichess.c  antichess.h  ataxx.c  ataxx.h  blet.c  board.c  board.h  breakthrough.c  checkers.c  checkers.h  chess.c  chess.h  cpento.c  dirmaze.c  dirmaze.h  dotsandboxes.c  eightqueens.c  engine.c  engine.h  fifteen.c  fifteen.h  flw.c  flwords.h  game.h  hash.c  hiq.c  hiq.h  infiltrate.c  infiltrate.h  knights.c  kttour.c  mastermind.c  mastermind.h  (+38 more)
src/.deps/: aaball.P  ab.P  antichess.P  ataxx.P  board.P  checkers.P  chess.P  dirmaze.P  engine.P  fifteen.P  hash.P  hiq.P  infiltrate.P  mastermind.P  maze.P  memory.P  menu.P  minimax.P  move.P  othello.P  pacman.P  pentaline.P  plot4.P  prefs.P  rgb.P  samegame.P  stack.P  tetris.P  ui.P
